--- a/conf/distro/lakebodom.conf
+++ b/conf/distro/lakebodom.conf
@@ -4,6 +4,7 @@
 # All rights reserved.
 
 require conf/distro/poky.conf
+
 DISTRO = "lakebodom"
 
 POKY_DEFAULT_DISTRO_FEATURES = ""
@@ -16,8 +17,8 @@ DISTRO_FEATURES = "\
     alsa \
     bluetooth \
     ipv4 \
-    ipv6 \
     opengl \
+    pci \
     usbhost \
     wifi \
     "
