Use systemd as init system

--- a/conf/distro/lakebodom.conf
+++ b/conf/distro/lakebodom.conf
@@ -19,9 +19,16 @@ DISTRO_FEATURES = "\
     ipv4 \
     opengl \
     pci \
+    systemd \
     usbhost \
     wifi \
     "
+
+# Bootloader appends
+APPEND = "systemd.default_standard_output=null systemd.default_standard_error=null quiet"
+
+VIRTUAL-RUNTIME_init_manager = "systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
 IMAGE_FSTYPES = "hddimg"
 
