--- a/conf/distro/lakebodom.conf
+++ b/conf/distro/lakebodom.conf
@@ -11,6 +11,8 @@ POKY_DEFAULT_DISTRO_FEATURES = ""
 POKY_DEFAULT_EXTRA_RDEPENDS += "packagegroup-core-boot"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
+PREFERRED_VERSION_linux-yocto = "3.17%"
+
 DISTRO_FEATURES = "\
     ${DISTRO_FEATURES_LIBC_DEFAULT} \
     alsa \
@@ -23,7 +25,7 @@ DISTRO_FEATURES = "\
     "
 
 # Bootloader appends
-APPEND = "systemd.default_standard_output=null systemd.default_standard_error=null quiet"
+APPEND = "systemd.default_standard_output=null systemd.default_standard_error=null i915.fastboot=1 quiet"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
