Disable login manager

--- a/conf/distro/lakebodom.conf
+++ b/conf/distro/lakebodom.conf
@@ -28,6 +28,8 @@ DISTRO_FEATURES = "\
 APPEND = "systemd.default_standard_output=null systemd.default_standard_error=null vt.color=0x00 i915.fastboot=1 quiet"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
+VIRTUAL-RUNTIME_login_manager = ""
+
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 
 IMAGE_FSTYPES = "hddimg"
