Super hack to make boot silent
Set the terminal color to black on black, so we wont see anything after
grub (in theory).

--- a/conf/distro/lakebodom.conf
+++ b/conf/distro/lakebodom.conf
@@ -25,7 +25,7 @@ DISTRO_FEATURES = "\
     "
 
 # Bootloader appends
-APPEND = "systemd.default_standard_output=null systemd.default_standard_error=null i915.fastboot=1 quiet"
+APPEND = "systemd.default_standard_output=null systemd.default_standard_error=null vt.color=0x00 i915.fastboot=1 quiet"
 
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
