Made crosswalk-service customizable via variable
We can now install crosswalk-service on an image and define
CROSSWALK_SERVICE_URI at local.conf. Crosswalk will autostart after
the image boots and load the URI specified.

--- a/recipes-crosswalk/crosswalk-service/crosswalk-service/crosswalk.service
+++ b/recipes-crosswalk/crosswalk-service/crosswalk-service/crosswalk.service
@@ -3,7 +3,7 @@ Description=Crosswalk is a web runtime for ambitious HTML5 applications
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/xwalk /usr/lib/hexgl/index.html
+ExecStart=/usr/bin/xwalk-service
 
 [Install]
 WantedBy=multi-user.target
