Use SysVinit by default
Try to use more Yocto standard features.

--- a/conf/distro/crosswalk-embedded.conf
+++ b/conf/distro/crosswalk-embedded.conf
@@ -19,18 +19,12 @@ DISTRO_FEATURES = "\
     ipv4 \
     opengl \
     pci \
-    systemd \
     usbhost \
     wifi \
     "
 
 # Bootloader appends
-APPEND = "systemd.default_standard_output=null systemd.default_standard_error=null vt.color=0x00 i915.fastboot=1 quiet"
-
-VIRTUAL-RUNTIME_init_manager = "systemd"
-VIRTUAL-RUNTIME_login_manager = ""
-
-DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
+APPEND = "i915.fastboot=1"
 
 IMAGE_FSTYPES = "hddimg"
 
